--- a/public/404.html
+++ b/public/404.html
@@ -18,6 +18,8 @@
   <meta name="description"
     content="Ang Bantay Bayan ay citizen-watch program na inilunsad ng GoodGov PH upang siguraduhin na ang ating mga lokal na pamahalaan (LGU) ay may ginagawang mga hakbang sa mga pangangailangan ng mga mamamayan sa panahon ng krisis tulad ng COVID-19." />
 
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
   <style media="screen">
     body {
       background: #ECEFF1;
