--- a/public/about.html
+++ b/public/about.html
@@ -18,7 +18,8 @@
   <meta name="description"
     content="Ang Bantay Bayan ay citizen-watch program na inilunsad ng GoodGov PH upang siguraduhin na ang ating mga lokal na pamahalaan (LGU) ay may ginagawang mga hakbang sa mga pangangailangan ng mga mamamayan sa panahon ng krisis tulad ng COVID-19." />
 
-
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
   <!-- update the version number as needed -->
   <script defer src="/__/firebase/7.14.0/firebase-app.js"></script>
   <!-- include only the Firebase features as you need -->
@@ -96,11 +97,13 @@
       <div class="ovw_bantaybayan_content">
         <h5>WHAT IS BANTAY BAYAN?</h5>
         <p>
-          <strong>Bantay Bayan</strong> is a citizen-watch and legal assistance program that aims to ensure that Local Government 
-          Units (LGUs) practice good governance amid the COVID-19 crisis. Since it launched in March, Bantay Bayan 
-          has gathered over 1000 volunteers nationwide. It is spearheaded by GoodGovPH, a youth-led movement for good 
-          governance in the Philippines registered under the National Youth Commission (NYC-YORP), together with volunteer 
-          lawyers and law students. Its website is designed and developed by the Developer Student Clubs Loyola.  
+          <strong>Bantay Bayan</strong> is a citizen-watch and legal assistance program that aims to ensure that Local
+          Government
+          Units (LGUs) practice good governance amid the COVID-19 crisis. Since it launched in March, Bantay Bayan
+          has gathered over 1000 volunteers nationwide. It is spearheaded by GoodGovPH, a youth-led movement for good
+          governance in the Philippines registered under the National Youth Commission (NYC-YORP), together with
+          volunteer
+          lawyers and law students. Its website is designed and developed by the Developer Student Clubs Loyola.
         </p>
       </div>
     </div>
@@ -136,14 +139,14 @@
           <h4>LGU WATCH</h4>
           <h5>Mobilize | Volunteer Engagement Team</h5>
           <p>
-            Bantay Bayan mobilizes volunteers nationwide who will monitor the actions of their respective LGUs 
-            and act upon issues they see in their communities. 
+            Bantay Bayan mobilizes volunteers nationwide who will monitor the actions of their respective LGUs
+            and act upon issues they see in their communities.
           </p>
           <h5>Report | Monitoring and Evaluation Team</h5>
           <p>
-            The Bantay Bayan Team prescribes action steps that volunteers may pursue to resolve non-legal 
-            concerns. Legal concerns, on the other hand, are forwarded to the Bantay Bayan Legal team for legal 
-            assistance. 
+            The Bantay Bayan Team prescribes action steps that volunteers may pursue to resolve non-legal
+            concerns. Legal concerns, on the other hand, are forwarded to the Bantay Bayan Legal team for legal
+            assistance.
           </p>
         </div>
         <img src="./src/assets/images/about_citizen_mobilization.png" class="citizen_mobilization_logo"
@@ -195,11 +198,11 @@
         <div class="legal_response_subcontent">
           <h4>LEGAL ASSISTANCE</h4>
           <p>
-            Bantay Bayan extends COVID-19-related legal assistance and guidance to the general public through 
-            the Bantay Bayan Legal Helpdesk. 
+            Bantay Bayan extends COVID-19-related legal assistance and guidance to the general public through
+            the Bantay Bayan Legal Helpdesk.
           </p>
           <p>
-            The Bantay Bayan Legal Affairs team, composed of lawyers and law students, responds to concerns 
+            The Bantay Bayan Legal Affairs team, composed of lawyers and law students, responds to concerns
             raised in the Helpdesk by producing legal recommendations or other legal documents for action.
           </p>
         </div>
@@ -216,9 +219,9 @@
         <div class="usap_tayo_subcontent">
           <h4>PUBLIC AWARENESS</h4>
           <p>
-            Bantay Bayan regularly produces informative and educational materials (FAQs, primers, infographics, 
-            statements), writes articles on volunteers and frontliners, and hosts online educational discussions. 
-            This is to make relevant information simpler and more accessible to the people. 
+            Bantay Bayan regularly produces informative and educational materials (FAQs, primers, infographics,
+            statements), writes articles on volunteers and frontliners, and hosts online educational discussions.
+            This is to make relevant information simpler and more accessible to the people.
           </p>
           <p>You can view our “Usap Tayo!” online sessions below: </p>
         </div>
@@ -246,12 +249,12 @@
               src="./src/assets/images/about_twitter.png" class="abt_twitter_1" alt="twitter_icon"></a>
         </div>
         <p>
-          GoodGovPH is a youth-led movement for good governance in the Philippines. It seeks to champion the 
-          principles of good governance through advocacy campaigns, alliance-building, governance education, 
+          GoodGovPH is a youth-led movement for good governance in the Philippines. It seeks to champion the
+          principles of good governance through advocacy campaigns, alliance-building, governance education,
           community collaboration, and innovation.
         </p>
         <p>
-          It is a youth organization registered under the National Youth Commission - Youth Organization 
+          It is a youth organization registered under the National Youth Commission - Youth Organization
           Registration Program (YORP).
         </p>
       </div>
@@ -529,7 +532,8 @@
         </div>
       </div>
       <div class="org">
-        <img src="./src/assets/images/KALikha_ Kasama Ka sa Paglikha ng Arte at Literatura Para sa Bayanpng.png" class="org_logos" alt="kalikha">
+        <img src="./src/assets/images/KALikha_ Kasama Ka sa Paglikha ng Arte at Literatura Para sa Bayanpng.png"
+          class="org_logos" alt="kalikha">
         <h4>KALikha</h4>
         <div>
           <!-- <a href="#" target="_blank" rel="noopener noreferrer"><img src="./src/assets/images/about_fb.png"
@@ -690,7 +694,7 @@
       </div>
       <div class="org">
         <img src="./src/assets/images/UST The Political Science Forum.png" class="org_logos" alt="ust_polsci">
-        <h4>UST The  Political Science Forum</h4>
+        <h4>UST The Political Science Forum</h4>
         <div>
           <!-- <a href="#" target="_blank" rel="noopener noreferrer"><img src="./src/assets/images/about_fb.png"
               alt="fb_icon"></a>
