--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,8 @@
   <meta name="description"
     content="Ang Bantay Bayan ay citizen-watch program na inilunsad ng GoodGov PH upang siguraduhin na ang ating mga lokal na pamahalaan (LGU) ay may ginagawang mga hakbang sa mga pangangailangan ng mga mamamayan sa panahon ng krisis tulad ng COVID-19." />
 
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
   <!-- update the version number as needed -->
   <script defer src="/__/firebase/7.14.0/firebase-app.js"></script>
   <!-- include only the Firebase features as you need -->
@@ -100,7 +102,7 @@
     <div class="helpdesk_content">
       <h1>BANTAY BAYAN <br> HELP DESK </h1>
       <p>
-        The Bantay Bayan Legal Affairs team, composed of lawyers and law students, responds to concerns raised 
+        The Bantay Bayan Legal Affairs team, composed of lawyers and law students, responds to concerns raised
         in the Helpdesk by producing legal recommendations or other legal documents for action.
       </p>
       <a href="help-desk.html">SEEK LEGAL AID</a>
@@ -117,8 +119,8 @@
     <div class="survey_content">
       <h1>LGU WATCH</h1>
       <p>
-        Bantay Bayan mobilizes volunteers nationwide who will monitor the actions of their respective LGUs amid 
-        the COVID-19 crisis. The LGU Response Map visualizes the data gathered from volunteers. 
+        Bantay Bayan mobilizes volunteers nationwide who will monitor the actions of their respective LGUs amid
+        the COVID-19 crisis. The LGU Response Map visualizes the data gathered from volunteers.
       </p>
       <a href="weekly-reports.html" id="submit-lgu-response">SUBMIT LGU REPORT</a>
       <a href="lgu-response-map.html" id="view-lgu-response">VIEW LGU RESPONSE MAP</a>
