--- a/public/weekly-reports.html
+++ b/public/weekly-reports.html
@@ -18,7 +18,8 @@
   <meta name="description"
     content="Ang Bantay Bayan ay citizen-watch program na inilunsad ng GoodGov PH upang siguraduhin na ang ating mga lokal na pamahalaan (LGU) ay may ginagawang mga hakbang sa mga pangangailangan ng mga mamamayan sa panahon ng krisis tulad ng COVID-19." />
 
-
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
   <!-- update the version number as needed -->
   <script defer src="/__/firebase/7.14.0/firebase-app.js"></script>
   <!-- include only the Firebase features as you need -->
@@ -91,7 +92,10 @@
   </nav>
 
   <div class="container">
-    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeO4yzn56wrUa18W7q75oWCeMnxc_sBEcYqQM6y7hVVP5VmjQ/viewform?embedded=true" style="width: 100%; height: 100vh; overflow-x: hidden !important;" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+    <iframe
+      src="https://docs.google.com/forms/d/e/1FAIpQLSeO4yzn56wrUa18W7q75oWCeMnxc_sBEcYqQM6y7hVVP5VmjQ/viewform?embedded=true"
+      style="width: 100%; height: 100vh; overflow-x: hidden !important;" frameborder="0" marginheight="0"
+      marginwidth="0">Loading…</iframe>
   </div>
 
   <footer>
