--- a/public/teams.html
+++ b/public/teams.html
@@ -17,7 +17,8 @@
     content="Ang Bantay Bayan ay citizen-watch program na inilunsad ng GoodGov PH upang siguraduhin na ang ating mga lokal na pamahalaan (LGU) ay may ginagawang mga hakbang sa mga pangangailangan ng mga mamamayan sa panahon ng krisis tulad ng COVID-19." />
   <meta name="description"
     content="Ang Bantay Bayan ay citizen-watch program na inilunsad ng GoodGov PH upang siguraduhin na ang ating mga lokal na pamahalaan (LGU) ay may ginagawang mga hakbang sa mga pangangailangan ng mga mamamayan sa panahon ng krisis tulad ng COVID-19." />
-
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
 
   <!-- update the version number as needed -->
   <script defer src="/__/firebase/7.14.0/firebase-app.js"></script>
@@ -233,7 +234,7 @@
               <img src="./src/assets/members/Externals and Marketing_ Vina Mengua.jpg" alt="member">
               <h3>Vina Mengua</h3>
               <h5>EXTERNALS & MARKETING </h5>
-            </div>         
+            </div>
             <div class="member">
               <img src="./src/assets/members/Sison_DSC.png" alt="member">
               <h3>Harvey Sison</h3>
@@ -248,7 +249,7 @@
               <img src="./src/assets/members/Ramos_DSC.jpg" alt="member">
               <h3>Patricia Ramos</h3>
               <h5>WEB DEVELOPMENT</h5>
-            </div> 
+            </div>
             <div class="member">
               <img src="./src/assets/members/download.png" alt="member">
               <h3>Beatrice Remollo</h3>
