--- a/public/teams.html
+++ b/public/teams.html
@@ -238,7 +238,7 @@
             <div class="member">
               <img src="./src/assets/members/Sison_DSC.png" alt="member">
               <h3>Harvey Sison</h3>
-              <h5>WEB DEVELOPMENT</h5>
+              <h5>WEB DEVELOPMER</h5>
             </div>
             <div class="member">
               <img src="./src/assets/members/Go_DSC.jpg" alt="member">
@@ -248,12 +248,12 @@
             <div class="member">
               <img src="./src/assets/members/Ramos_DSC.jpg" alt="member">
               <h3>Patricia Ramos</h3>
-              <h5>WEB DEVELOPMENT</h5>
+              <h5>UX/UI DESIGN</h5>
             </div>
             <div class="member">
               <img src="./src/assets/members/Remollo.jpg" alt="member">
               <h3>Beatrice Remollo</h3>
-              <h5>DATA SCIENTIST</h5>
+              <h5>DATA SCIENCE</h5>
             </div>
           </div>
         </div>
@@ -291,7 +291,8 @@
     <div class="footerDSC">
       <hr />
       <label>Passionately Designed and Developed by
-        <a href="https://dscadmu.org" target="_blank" rel="noopener noreferrer">Developer Student Clubs Loyola</a></label>
+        <a href="https://dscadmu.org" target="_blank" rel="noopener noreferrer">Developer Student Clubs
+          Loyola</a></label>
     </div>
   </footer>
 
