norel redo and favicon revised

--- a/public/contact.html
+++ b/public/contact.html
@@ -18,8 +18,8 @@
   <meta name="description"
     content="Ang Bantay Bayan ay citizen-watch program na inilunsad ng GoodGov PH upang siguraduhin na ang ating mga lokal na pamahalaan (LGU) ay may ginagawang mga hakbang sa mga pangangailangan ng mga mamamayan sa panahon ng krisis tulad ng COVID-19." />
 
-  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-  <link rel="icon" href="/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon"href="%PUBLIC_URL%/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" type="image/x-icon">
   <!-- update the version number as needed -->
   <script defer src="/__/firebase/7.14.0/firebase-app.js"></script>
   <!-- include only the Firebase features as you need -->
@@ -189,7 +189,7 @@
     <div class="footerDSC">
       <hr />
       <label>Passionately Designed and Developed by
-        <a href="https://dscadmu.org" target="_blank" rel="noopener noreferrer">Developer Student Clubs Loyola</a></label>
+        <a href="https://dscadmu.org" rel="noopener noreferrer" target="_blank">Developer Student Clubs Loyola</a></label>
     </div>
   </footer>
   <script src="./src/scripts/jquery.min.js"></script>
