Initialize Firebase Analytics

--- a/public/about.html
+++ b/public/about.html
@@ -783,6 +783,9 @@
         <a href="https://dscadmu.org" rel="noopener noreferrer" target="_blank">Developer Student Clubs Loyola</a></label>
     </div>
   </footer>
+  <script>
+     firebase.analytics();
+  </script>
 </body>
 
 </html>
