--- a/public/faqs.html
+++ b/public/faqs.html
@@ -283,10 +283,13 @@
     <div class="footerDSC">
       <hr />
       <label>Passionately Designed and Developed by
-        <a href="https://dscadmu.org" rel="noopener noreferrer" target="_blank" >Developer Student Clubs Loyola</a></label>
+        <a href="https://dscadmu.org" rel="noopener noreferrer" target="_blank">Developer Student Clubs
+          Loyola</a></label>
     </div>
   </footer>
-
+  <script>
+    firebase.analytics();
+  </script>
   <script src="./src/scripts/faqs.js"></script>
 </body>
 
