--- a/public/lgu-response-map.html
+++ b/public/lgu-response-map.html
@@ -141,11 +141,14 @@
         <div class="footerDSC">
             <hr />
             <label>Passionately Designed and Developed by
-                <a href="https://dscadmu.org" rel="noopener noreferrer" target="_blank">Developer Student Clubs Loyola</a></label>
+                <a href="https://dscadmu.org" rel="noopener noreferrer" target="_blank">Developer Student Clubs
+                    Loyola</a></label>
         </div>
     </footer>
 
-
+    <script>
+        firebase.analytics();
+    </script>
     <script type='text/javascript'>
         var divElement = document.getElementById('viz1588156397959');
         var vizElement = divElement.getElementsByTagName('object')[0];
