--- a/public/index.html
+++ b/public/index.html
@@ -20,16 +20,29 @@
 
   <link rel="shortcut icon" href="./src/favicon.ico" type="image/x-icon">
   <link rel="icon" href="./src/favicon.ico" type="image/x-icon">
-  <!-- update the version number as needed -->
-  <script defer src="/__/firebase/7.14.0/firebase-app.js"></script>
-  <!-- include only the Firebase features as you need -->
-  <script defer src="/__/firebase/7.14.0/firebase-auth.js"></script>
-  <script defer src="/__/firebase/7.14.0/firebase-database.js"></script>
-  <script defer src="/__/firebase/7.14.0/firebase-messaging.js"></script>
-  <script defer src="/__/firebase/7.14.0/firebase-storage.js"></script>
-  <!-- initialize the SDK after all desired features are loaded -->
-  <script defer src="/__/firebase/init.js"></script>
+  <!-- The core Firebase JS SDK is always required and must be listed first -->
+  <script src="https://www.gstatic.com/firebasejs/7.14.6/firebase-app.js"></script>
 
+  <!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+  <script src="https://www.gstatic.com/firebasejs/7.14.6/firebase-analytics.js"></script>
+
+  <script>
+    // Your web app's Firebase configuration
+    var firebaseConfig = {
+      apiKey: "AIzaSyAGd9zmLMZ8MLHXS7xf0xFFVGA-1PbRoR8",
+      authDomain: "bantay-bayan.firebaseapp.com",
+      databaseURL: "https://bantay-bayan.firebaseio.com",
+      projectId: "bantay-bayan",
+      storageBucket: "bantay-bayan.appspot.com",
+      messagingSenderId: "1036778430237",
+      appId: "1:1036778430237:web:81355a1cd31c31eb7a4bf4",
+      measurementId: "G-CGRTFGLZEM"
+    };
+    // Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
+    firebase.analytics();
+  </script>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="./src/stylesheets/normalize.css">
@@ -84,7 +97,7 @@
       </li>
       <li>
         <a class="faqs" href="faqs.html">FAQs</a>
-      </li> 
+      </li>
       <li>
         <a class="team" href="teams.html">Team</a>
       </li>
